--- a/posts/static/posts/css/base.css
+++ b/posts/static/posts/css/base.css
@@ -2,19 +2,58 @@
   font-family: IRANSans;
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/eot/IRANSansWeb_Light.eot');
-  src: url('../fonts/eot/IRANSansWeb_Light.eot?#iefix') format('embedded-opentype'), /* IE6-8 */
-  url('../fonts/woff2/IRANSansWeb_Light.woff2') format('woff2'), /* FF39+,Chrome36+, Opera24+*/
-  url('../fonts/woff/IRANSansWeb_Light.woff') format('woff'), /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-  url('../fonts/ttf/IRANSansWeb_Light.ttf') format('truetype');
+  src: url('../fonts/iransans/eot/IRANSansWeb_Light.eot');
+  src: url('../fonts/iransans/eot/IRANSansWeb_Light.eot?#iefix') format('embedded-opentype'), /* IE6-8 */
+  url('../fonts/iransans/woff2/IRANSansWeb_Light.woff2') format('woff2'), /* FF39+,Chrome36+, Opera24+*/
+  url('../fonts/iransans/woff/IRANSansWeb_Light.woff') format('woff'), /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+  url('../fonts/iransans/ttf/IRANSansWeb_Light.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Material Icons/MaterialIcons-Regular.eot'); /* For IE6-8 */
+    src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url('../fonts/Material Icons/MaterialIcons-Regular.woff2') format('woff2'),
+    url('../fonts/Material Icons/MaterialIcons-Regular.woff') format('woff'),
+    url('../fonts/Material Icons/MaterialIcons-Regular.ttf') format('truetype');
+
+}
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
 body {
  /*
  using this font for eng text
  */
     font-family:IRANSans;
     background-color:#f4f4f4;
+}
+span,p{
+font-family:IRANSans;
 }
 /*
  using this font for fa text
