--- a/posts/static/posts/css/detail.css
+++ b/posts/static/posts/css/detail.css
@@ -10,7 +10,6 @@ line-height: 2;
 }
 
 #post-text img{
-
 text-align:center;
 margin:10px 10px;
 
@@ -32,18 +31,9 @@ padding:0px;
 
 }
 
-#detail-container .jumbotron .tags{
 
-font-size:20px;
 
-}
 
-#detail-container .jumbotron .glyphicon-tags{
-
-padding-left:5px;
-color:blue;
-
-}
 
 .comments{
 
@@ -136,17 +126,17 @@ padding:20px;
 #content-tags{
 
 height:100%;
-padding:0px 20px;
+padding:0px 94.45px 0px 20px;;
 margin-bottom:20px;
 
 }
 
 #content-tags a{
 
-background-color:#eaeaea;
+border-radius:0px;
 padding:2px 10px;
 margin:10px 0px 0px 5px;
-font-size:20px;
+font-size:15px;
 
 color:#000;
 
@@ -166,26 +156,28 @@ padding-right:0px;
 }
 #author-info-left-side p{
 
-
+font-size:17px;
 text-align: justify;
 }
 
 
 #author-info-right-side{
 float:right;
-padding-right:20px;
-text-align:center
+
+text-align:center;
 }
 
 
 #author-img{
-
-width:80px;
-height:80px;
+margin:0px;
+display:inline-block;
+width:100px;
+height:100px;
+border-radius:100%;
 }
 #author-username{
 
-font-size:17px;
+font-size:25px;
 
 }
 
