--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -14,12 +14,7 @@ background-color:#f4f4f4;
 
 
 }
-#right-side .row{
 
-background-color:#fff;
-box-shadow: 0px 1px 4px #bbb;
-
-}
 
 
 #right-side .jumbotron{
@@ -34,9 +29,10 @@ padding-right:0px;
 
 
 #right-side .jumbotron .row{
-
+background-color:#fff;
 margin:0;
 margin-top:20px;
+box-shadow: 0px 1px 4px #bbb;
 border: 1px solid rgba(0, 0, 0, .09);
 padding:0px;
 
@@ -55,6 +51,11 @@ padding-top:10px;
 border:none;
 margin-right:10px;
 margin-left:10px;
+}
+.pagination-panel .panel{
+
+background-color:transparent;
+
 }
 
 .post-bottom{
@@ -120,11 +121,10 @@ background-color:#fff;
 padding-right:0px;
 padding-left:0px;
 padding-top:0px;
-}
-#left-side .jumbotron .container{
-
+box-shadow: 0px 1px 4px #bbb;
 margin-top:20px;
-
+border-radius:0px;
+border: 1px solid rgba(0, 0, 0, .09);
 }
 
 #left-side .jumbotron p{
@@ -136,8 +136,8 @@ font-size:15px;
 width:100%;
 height:100%;
 overflow: hidden;
-padding:10px;
-}
+padding:15px 10px;
+border-bottom: 1px solid rgba(0, 0, 0, .09);}
 
 #left-side .most-seen-post .img-of-most-seen-post{
 
@@ -147,16 +147,20 @@ width:20%;
 }
 #left-side .most-seen-post .img-of-most-seen-post img{
 
-width:40px;
-height:40px;
+width:45px;
+height:45px;
 border-radius:100%;
 
 }
 #left-side .most-seen-post .header-of-most-seen-post{
 float:left;
 width:80%;
+height:45px;
 
 }
+
+
+
 @media only screen and (max-width:966px){
 
 #main,#homepage-container-fluid{
@@ -175,4 +179,5 @@ margin:10px auto;
 margin:10px auto;
 
 }
+
 }
