--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -6,17 +6,14 @@
     {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'posts/css/bootstrap.min.css' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'posts/css/base.css' %}">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{% static 'posts/css/font-awesome.min.css' %}" rel="stylesheet">
     {% block style %}
     <!--  another pages which inherited from base.html can add their own style file to page !!!  -->
     {% endblock %}
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
     {% block title %}
     <title>base</title>
     {% endblock %}
@@ -264,8 +261,8 @@
 </footer>
 </body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="{% static 'posts/js/jquery.min.js' %}"></script>
+<script src="{% static 'posts/js/bootstrap.min.js' %}"></script>
 
 <script src="{% static 'posts/js/jquery.validate.js' %}"></script>
 
