logo added navbar fixed contact link edited

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -32,8 +32,8 @@
                 <i class="material-icons" id="arrow-forward">arrow_forward</i>
 
             </button>
-              <a class="navbar-brand" href="{% url 'posts:home' %}">
-                    Navasan
+              <a  href="{% url 'posts:home' %}">
+                   <img src="{% static 'posts/img/Logo grey transparent.png' %}" class="navbar-brand" >
                 </a>
 
             <div class="navbar-header">
@@ -218,7 +218,7 @@
                             <a href="/specificpages/about-us">
                                 درباره ما
                             </a>
-                            <a href="/specificpages/contact/">
+                            <a href="/user/contact/">
                                 تماس با ما
                             </a>
                             <a href="/specificpages/rules/">
