--- a/specificpages/templates/specificpages/about-us.html
+++ b/specificpages/templates/specificpages/about-us.html
@@ -267,5 +267,10 @@
         </ol>
     </div>
 </div>
+{% endblock %}
+
+{% block script %}
+
 <script src="{% static 'specificpages/js/about-us.js' %}"></script>
+
 {% endblock %}
