--- a/posts/static/posts/css/base.css
+++ b/posts/static/posts/css/base.css
@@ -81,10 +81,12 @@ box-shadow: rgba(0, 0, 0, 0.30) 0px 4px 5px 0px, rgba(0, 0, 0, 0.18) 0px 1px 10p
 .navbar-fixed-top .navbar-collapse{
 
 position:relative;
-margin-right:148.39px;
+margin-right:253px;
 margin-left:0px;
 padding-left:0px;
 padding-right:0px;
+padding-top:15px;
+padding-bottom:15px;
 }
 
 #navbar1{
@@ -101,7 +103,10 @@ float:right;
 color:#fff;
 padding-left:15px;
 padding-right:15px;
+width:200px;
 
+height:80px;
+padding-top:20px;
 }
 
 
@@ -115,7 +120,7 @@ color:#FFF;
 .navbar-text{
 
 margin:0px;
-padding:15px;
+padding:20px;
 
 }
                             /*           remove hover color             */
@@ -205,7 +210,7 @@ text-align:left;
 .navbar-right{
 
 margin-right:0px;
-padding-right:15px;
+
 
 }
 
@@ -217,6 +222,7 @@ color:#FFF;
 .navbar-nav{
 
 padding-right:0px;
+padding
 
 }
 
@@ -226,6 +232,7 @@ border-radius:0px;
 height:40px;
 float:left;
 margin-left:15px;
+margin-top:20px;
 
 }
 
@@ -383,6 +390,7 @@ height:40px;
 width:45px;
 padding:9px 10px;
 margin:8px;
+margin-top:20px;
 color:#fff;
 margin-right:0px;
 }
@@ -396,6 +404,7 @@ height:40px;
 width:45px;
 padding:9px 10px;
 margin:8px;
+margin-top:20px;
 margin-right:0px;
 color:#fff;
 
@@ -504,7 +513,7 @@ margin:auto 0;
 }
 
 #main{
-margin-top:110px;
+margin-top:154px;
 margin-left:0px;
 
 }
@@ -595,8 +604,7 @@ padding-top:10px;
 
 .navbar-default .navbar-nav > li > .dropdown-toggle{
 
-padding-right:15px;
-padding-left:15px;
+padding:20px;
 }
 .dropdown-toggle{
 
@@ -613,11 +621,23 @@ right:0px;
 
 
 }
- .dropdown-menu > li > a{
+.navbar-default .navbar-nav .open .dropdown-menu > li > a{
 
 color:#000;
 
 }
+
+
+.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+color:#000;
+}
+.dropdown-menu{
+
+
+padding-right:0px;
+
+}
+
 .navbar-right:hover{
 
 background-color:rgb(0,0,0,.3);
