some references corrected and pamm and mql added to navbar

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -98,7 +98,25 @@
 
 
                 </ul>
-                <p class="navbar-text navbar-right"><a href="/specificpages/calender/" class="navbar-link">تقویم اقتصادی</a>
+                <ul class="nav navbar-nav navbar-right" style="">
+
+                    <li role="presentation" class="dropdown trading-accounts-dropdown">
+
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"
+                           role="button"
+                           aria-haspopup="true" aria-expanded="false">
+                            حساب ها </a>
+                        <ul class="dropdown-menu menu3">
+
+                            <li><a href="/specificpages/mql/">mql</a></li>
+                            <li><a href="/specificpages/pamm/">pamm </a></li>
+
+                        </ul>
+                    </li>
+
+
+                </ul>
+                <p class="navbar-text navbar-right"><a href="/calender/" class="navbar-link">تقویم اقتصادی</a>
                 </p>
 
 
