--- a/specificpages/templates/specificpages/mql.html
+++ b/specificpages/templates/specificpages/mql.html
@@ -13,8 +13,10 @@
 {% block body %}
 
 <div class="container-fluid" id="mql-container">
-    <div id="mql-pdf">قبل از هرچیز به دوستانی که با mql5 آشنایی ندارید پیشنهام میکنم برروی mql-pdf کلیک کنند تا فایل pdf
-        آموزشی mql را مشاهده کنند.
+    <div id="mql-pdf">
+        <p>قبل از هرچیز به دوستانی که با mql5 آشنایی ندارید پیشنهام میکنم برروی mql-pdf کلیک کنند تا فایل pdf
+            آموزشی mql را مشاهده کنند.
+        </p>
     </div>
     <span id="mql-heading">
   استراتژی معاملاتی گروه نوسان گلد
@@ -51,7 +53,7 @@
     <p>ما توصیه می کنیم که شما قبل از هر گونه خرید در بازار MQL5، اول شرایط را امتحان کنیدفرآیند خرید شامل هیچ کارمزد
         پنهان، کمیسیون، و یا افزایش اسپرد نمی باشد</p>
 
-    <p>ر خرید که انجام می دهید، می تواند در حداکثر 3 کامپیوتر استفاده شودوجوه را می توان از طریق PayPal، WebMoney، QIWI
+    <p>هر خرید که انجام می دهید، می تواند در حداکثر 3 کامپیوتر استفاده شودوجوه را می توان از طریق PayPal، WebMoney، QIWI
     </p>
 </div>
 
