--- a/specificpages/templates/specificpages/pamm.html
+++ b/specificpages/templates/specificpages/pamm.html
@@ -13,7 +13,7 @@
 {% block body %}
 
 <div class="container-fluid" id="pamm-container">
-<p>ز برنامه سرمایه‌گذاری در بروکر FXTM ما استفاده کنید و با پیروی ازمعاملات برترین معامله‌کنندگان، سرمایه خود را در نقدشونده‌ترین بازار جهان افزایش دهید.</p>
+<p>از برنامه سرمایه‌گذاری در بروکر FXTM ما استفاده کنید و با پیروی ازمعاملات برترین معامله‌کنندگان، سرمایه خود را در نقدشونده‌ترین بازار جهان افزایش دهید.</p>
 
     <ul>
         <li>۱-برای حساب سرمایه‌گذاری ثبت‌نام کنید.</li>
