mql and pamm edited

--- a/specificpages/templates/specificpages/pamm.html
+++ b/specificpages/templates/specificpages/pamm.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block title %}
-<title>mqlنوسان گلد:</title>
+<title>نوسان گلد  |  pamm</title>
 {% endblock %}
 
 
@@ -26,7 +26,7 @@
     <span>برای ثبت نام در کارگزاری FXTM وارد لینک زیر شوید:</span>
     <a href="https://www.forextime.com/?partner_id=4913110">https://www.forextime.com/?partner_id=4913110</a>
     <span>برای وصل شدن به حساب سرمایه گزاری ما از طریق لینک زیر اقدام کنید:</span>
-    <a>https://www.forextime.com/fa/strategy/Navasangold</a>
+    <a href="https://www.forextime.com/fa/strategy/Navasangold">https://www.forextime.com/fa/strategy/Navasangold</a>
 </div>
 
 {% endblock %}
