--- a/specificpages/templates/specificpages/mql.html
+++ b/specificpages/templates/specificpages/mql.html
@@ -6,13 +6,16 @@
 {% endblock %}
 
 {% block title %}
-<title>mqlنوسان گلد:</title>
+<title>نوسان گلد  |  mql</title>
 {% endblock %}
 
 
 {% block body %}
 
 <div class="container-fluid" id="mql-container">
+    <div class="text-center">
+        <img src="{% static 'specificpages/img/mql5.png' %}" style="padding-bottom:20px;">
+</div>
     <div id="mql-pdf">
         <p>قبل از هرچیز به دوستانی که با mql5 آشنایی ندارید پیشنهام میکنم برروی mql-pdf کلیک کنند تا فایل pdf
             آموزشی mql را مشاهده کنند.
@@ -55,6 +58,8 @@
 
     <p>هر خرید که انجام می دهید، می تواند در حداکثر 3 کامپیوتر استفاده شودوجوه را می توان از طریق PayPal، WebMoney، QIWI
     </p>
+    <p>با استفاده از لینک مقابل به حساب ما در mql5 وصل بشید:    <a href="https://www.mql5.com/en/signals/372033">https://www.mql5.com/en/signals/372033</a>
+</p>
 </div>
 
 {% endblock %}
