--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -273,13 +273,13 @@
                     <div class="row">
                         <div class="col-12">
 
-                            <a href="/specificpages/about-us">
+                            <a href="/about-us">
                                 درباره ما
                             </a>
-                            <a href="/user/contact/">
+                            <a href="/contact-us/">
                                 تماس با ما
                             </a>
-                            <a href="/specificpages/rules/">
+                            <a href="/rules/">
                                 قوانین
                             </a>
                             <a href="">
