--- a/specificpages/templates/specificpages/about-us.html
+++ b/specificpages/templates/specificpages/about-us.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid" id="about-us-container">
+<div class="container-fluid specificpage-container">
     <p>ما در این قسمت سعی کردیم توضیحات کاملی رو به شما ارائه دهیم .اگر به دنبال قسمت خاصی هستید میتوانید از لینک ها زیر استفاده کنید تا به آن قسمت بروید:</p>
     <div id="jump-to-specific-part">
         <ul>
