--- a/specificpages/templates/specificpages/mql.html
+++ b/specificpages/templates/specificpages/mql.html
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-<div class="container-fluid" id="mql-container">
+<div class="container-fluid specificpage-container">
     <div class="text-center">
         <img src="{% static 'specificpages/img/mql5.png' %}" style="padding-bottom:20px;">
 </div>
