--- a/specificpages/templates/specificpages/pamm.html
+++ b/specificpages/templates/specificpages/pamm.html
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-<div class="container-fluid" id="pamm-container">
+<div class="container-fluid specificpage-container">
 <p>از برنامه سرمایه‌گذاری در بروکر FXTM ما استفاده کنید و با پیروی ازمعاملات برترین معامله‌کنندگان، سرمایه خود را در نقدشونده‌ترین بازار جهان افزایش دهید.</p>
 
     <ul>
