--- a/specificpages/templates/specificpages/rules.html
+++ b/specificpages/templates/specificpages/rules.html
@@ -10,7 +10,7 @@
 <title>قوانین سایت  </title>
 {% endblock %}
 {% block body %}
-<div class="container-fluid" id="rules-container">
+<div class="container-fluid specificpage-container">
     <span id="rules-heading">
     نکات و قوانین
     </span>
