--- a/specificpages/static/specificpages/css/about-us.css
+++ b/specificpages/static/specificpages/css/about-us.css
@@ -9,19 +9,19 @@ color:#0066FF;
 background-color:transparent;
 
 }
-#about-us-container .list-heading{
+.specificpage-container .list-heading{
 display:inline-block;
 padding-bottom:10px;
 color:#1B1B1B;
 font-size:18px;
 
 }
-#about-us-container ul,ol{
+.specificpage-container ul,ol{
 
 list-style-type:none;
 }
 
-#about-us-container  ul  li::before {
+.specificpage-container ul  li::before {
   content: "\f104";
   font-family: FontAwesome;
   position:absolute;
@@ -29,14 +29,14 @@ padding-top:1px;
 
   color: #4570E6; /* or whatever color you prefer */
 }
-#about-us-container ul li p {
+.specificpage-container ul li p {
 
 font-style:justify;
 padding-right:6px;
 font-size:15px;
 
 }
-#about-us-container li{
+.specificpage-container li{
 
 padding-top:15px;
 
