--- a/specificpages/templates/specificpages/advertising.html
+++ b/specificpages/templates/specificpages/advertising.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid" id="advertising-container">
+<div class="container-fluid specificpage-container">
 
     <span id="advertising-heading"> تبلیغات در نوسان گلد </span>
     <br>
