--- a/specificpages/templates/specificpages/tariffs.html
+++ b/specificpages/templates/specificpages/tariffs.html
@@ -15,7 +15,7 @@
     <img src="" class="tariffs-img" alt="tariffs-img-1">
     <div class="description">
     <span ></span>
-    <a class="btn btn-default btn-md link-to-bank" href="">
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
 خرید
     </a>
         </div>
@@ -24,7 +24,7 @@
     <img src="" class="tariffs-img" alt="tariffs-img-2">
     <div class="description">
     <span ></span>
-    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send-to-bank'  %}">
+    <a class="btn btn-default btn-md link-to-bank" href="">
 خرید
     </a>
         </div>
