--- a/specificpages/templates/specificpages/tariffs.html
+++ b/specificpages/templates/specificpages/tariffs.html
@@ -24,7 +24,7 @@
     <img src="" class="tariffs-img" alt="tariffs-img-2">
     <div class="description">
     <span ></span>
-    <a class="btn btn-default btn-md link-to-bank" href="">
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
 خرید
     </a>
         </div>
@@ -33,7 +33,16 @@
     <img src="" class="tariffs-img" alt="tariffs-img-3">
     <div class="description">
     <span></span>
-    <a class="btn btn-default btn-md link-to-bank" href="">
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
+خرید
+    </a>
+        </div>
+</div>
+    <div class="tariffs tariffs-4">
+    <img src="" class="tariffs-img" alt="tariffs-img-4">
+    <div class="description">
+    <span></span>
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
 خرید
     </a>
         </div>
