templaye corrected and profile.save added to view

--- a/users/templates/users/verify_after_zarinpal.html
+++ b/users/templates/users/verify_after_zarinpal.html
@@ -20,5 +20,6 @@
     <p>اشتراک 6ماهه برای شما فعال شد .</p>
     {% else %}
     <p>اشتراک 4ماهه برای شما فعال شد .</p>
+    {% endif %}
 </div>
 {% endblock %}
