instagram link added /login css fixed /roles text edited and inbox added/print() deleted from users/view

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -300,7 +300,7 @@
                             <a href="https://t.me/signal_navasan"><img id="telegram-icon"
                                                                        src="{% static 'posts/img/telegram.png' %}"
                             ></a>
-                            <a href="https://instagram.com/"><img id="instagram-icon"
+                            <a href="https://www.instagram.com/navasangold/"><img id="instagram-icon"
                                                                   src="{% static 'posts/img/instagram.png' %}"></a>
 
                             <a href="https://twitter.com/"><img id="twitter-icon"
