--- a/specificpages/templates/specificpages/rules.html
+++ b/specificpages/templates/specificpages/rules.html
@@ -30,7 +30,8 @@
 </ul>
     <div id="rules-footer">
     <span>باتشکر</span>
- <span> مدیر سایت سعید صفایی</span>
+        <br>
+ <span> گروه مشاوره نوسان گلد</span>
     </div>
     </div>
 
