--- a/users/static/users/css/login.css
+++ b/users/static/users/css/login.css
@@ -1,4 +1,6 @@
 #main{
+//compressed imgs are .jpg
+
 background-image: url("../img/login-background.jpg") ;
 background-size: 1366px 800px;
 background-attachment: fixed;
